# katanarx

./: CMakeLists.txt
Shaders/: triangle.fs  triangle.vs
include/: App.h  Camera.h  Shader.h  Window.h
src/: App.cpp  Camera.cpp  Shader.cpp  Window.cpp  main.cpp
